ghc-4335c07/testsuite/tests/indexed-types/should_fail/T13102/orphan/O.hs
{-# LANGUAGE TypeFamilies #-}

module O where

import F

type instance F Int = Bool
